# raggie

./: .cursorignore  .gitignore  README.md  create_project.ps1  cxo_backend_code.txt  cxo_dashboard_code.txt  data.db  folder.txt  package-lock.json  pyproject.toml  rag_code.txt  requirements-dev.txt  sql_app.db  test.db  test_query.py  text2sql_code.txt
backend/: agents.py  backend_code.txt  main.py  tools.py
backend/api/: dependencies.py  sql_queries.py
backend/api/routes/: query.py  templates.py  text2sql.py  websocket.py
backend/core/: config.py  database.py  models.py  schemas.py
backend/services/: scheduler_service.py  text2sql_service.py  websocket_manager.py
backend/tests/: conftest.py  test_example.py  test_sql_queries.py
db/: finance_schema.puml  finance_seed.py  finance_test.db  init_finance_schema.sql
documents/: agents_prd.md  architecture.md  architecture_rag.md  c4_cxo.puml  code.txt  cxo.puml  llamaindex_sql_agent.txt  prd_dashboard.md  prd_dashboard_live_tiles.md  prd_rag.md  prd_text2sql.md  tasklist.md  tasklist_dashboard.md  tasklist_dashboard_live_tiles.md  tasklist_text2sql.md
frontend/: code.txt  env.d.ts  frontend_code.txt  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: SaveTemplateButton.tsx  Text2SqlQuery.tsx
frontend/src/components/features/: DynamicRenderer.tsx  RevenueChart.tsx  RevenueView.tsx
frontend/src/components/layout/: ChatInterface.tsx  Header.tsx
frontend/src/components/live/: LiveTile.tsx  LiveTileGrid.tsx
frontend/src/components/live/widgets/: BarChartWidget.tsx  LineChartWidget.tsx  NumberWidget.tsx  PieChartWidget.tsx  TableWidget.tsx  TextWidget.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/services/: api.ts  events.ts  template.service.ts  websocket.service.ts
frontend/src/types/: babel__standalone.d.ts  lucide-react.d.ts  recharts.d.ts
rag/: __init__.py
rag/chunking/: __init__.py  chunker.py  chunker_factory.py  html_chunker.py  markdown_chunker.py  page_wise_chunker.py  recursive_character_chunker.py  token_chunker.py
rag/cli/: __init__.py  main.py
rag/core/: __init__.py  config.py  interfaces.py  models.py
rag/documents/: RagSystemDocumentation.md  RagSystem_C4.puml  RagSystem_Class.puml  RagSystem_Components.puml  RagSystem_README.md  rag_code.txt
rag/embedding/: __init__.py  embedder.py  embeddings.py  text_embedder.py
rag/ingestion/: __init__.py  advanced_pdf_loader.py  deepdoc_pdf_loader.py  document_loader.py  file_parser.py  markdown_parser.py  ocr.py
rag/llm/: llm_client.py  vision_model.py
rag/store/: __init__.py  chroma_store.py  vector_store.py
rag/third_party_rag/deepdoc/parser/: pdf_parser.py  txt_parser.py  utils.py
rag/third_party_rag/deepdoc/vision/: layout_recognizer.py  ocr.py  t_ocr.py  t_recognizer.py  table_structure_recognizer.py
rag/third_party_rag/rag/app/: manual.py
rag/third_party_rag/rag/llm/: cv_model.py  sequence2txt_model.py
rag/third_party_rag/rag/nlp/: __init__.py  rag_tokenizer.py
tests/: __init__.py  conftest.py  test_agent.py  test_chroma_store.py  test_core_models.py  test_markdown_parser.py  test_sqlite.py  test_text_embedder.py  test_token_chunker.py
text2sql/: __init__.py
text2sql/agent/: sql_agent.py
text2sql/cli/: __init__.py  main.py
text2sql/core/: base.py  config.py  database.py  exceptions.py  interfaces.py  schema.py  sqlite.py
text2sql/formatters/: __init__.py  base.py  csv.py  factory.py  json.py  markdown.py  text.py
text2sql/tests/: create_test_db.py  test_database.py  test_formatters.py  test_sql_agent.py
text2sql/tests/test_data/: test.db
utils/: __init__.py  file_utils.py
