[project]
name = "rag-system"
version = "0.1.0"
description = "A RAG system with Text2SQL capabilities"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "chromadb==1.0.7",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.5",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "unstructured>=0.10.0",
    "pdfplumber>=0.10.0",
    "markdown>=3.4.0",
    "sentence-transformers>=4.1.0",
    "llama-index>=0.9.48",
    "openinference-instrumentation-openai>=0.1.26",
    "arize-phoenix==8.26.1",
    "opentelemetry-sdk>=1.32.1",
    "opentelemetry-exporter-otlp>=1.32.1",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
sqlite = [
    "aiosqlite>=0.19.0",
    "sqlparse>=0.4.4",
]
postgres = [
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
rag = "rag.cli.main:app"
t2s = "text2sql.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["rag", "text2sql"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=rag --cov=text2sql --cov-report=term-missing"


