[project]
name = "rag-system"
version = "0.1.0"
description = "A RAG system with Text2SQL capabilities"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "chromadb==1.0.7",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.5",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "unstructured>=0.10.0",
    "pdfplumber>=0.10.0",
    "markdown>=3.4.0",
    "sentence-transformers>=4.1.0",
    "llama-index>=0.9.48",
    "openinference-instrumentation-openai>=0.1.26",
    "arize-phoenix==8.26.1",
    "opentelemetry-sdk>=1.32.1",
    "opentelemetry-exporter-otlp>=1.32.1",
    "smolagents>=1.12.0",
    "litellm>=1.67.2",
    "faker>=37.1.0",
    "trio>=0.30.0",
    "xgboost>=3.0.0",
    "opencv-python>=4.11.0.86",
    "pyclipper>=1.3.0.post6",
    "shapely>=2.1.0",
    "docx>=0.2.4",
    "datrie>=0.8.2",
    "hanziconv>=0.3.2",
    "roman-numbers>=1.0.2",
    "word2number>=1.1",
    "cn2an>=0.5.23",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
sqlite = [
    "aiosqlite>=0.19.0",
    "sqlparse>=0.4.4",
]
postgres = [
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
rag = "rag.cli.main:app"
t2s = "text2sql.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["rag", "text2sql"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=rag --cov=text2sql --cov-report=term-missing"


